# snips

./: CMakeLists.txt
src/: consumer.h  main.cpp  main_app.cpp  main_app.h  producer.h
